--- a/friendProfile.html
+++ b/friendProfile.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My friend</title>
 </head>
 <body>
-    <a href="/friendProfile.html">My friend</a>
+    <h1>Jedsada Kampen</h1>
 </body>
 </html>
