--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <img src="/632115012.jpg" alt="My friend" height="50%" width="50%">
 </body>
 </html>
