--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-    <h3>To be continued </h3>
+    <a href="camt.html"> camt</a>
+    <br>
     <a href="/friendProfile.html">My friend</a>
+    <br>
     <img src="/632115012.jpg" alt="My friend" height="50%" width="50%">
 </body>
 
